--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-
-# this is the requirements.txt file
+# this is the "requirements.txt" file...
 
 python-dotenv
 
@@ -11,5 +10,10 @@ plotly
 
 sendgrid==6.6.0
 
+flask # <--- ADD FOR WEB APP
+#gunicorn
+
+
 # using this to find and run our tests:
 pytest
+
