--- a/requirements.txt
+++ b/requirements.txt
@@ -17,3 +17,6 @@ gunicorn # <--- UNCOMMENT FOR HEROKU DEPLOY
 # using this to find and run our tests:
 pytest
 
+# using bsoup in testing the web app:
+beautifulsoup4
+
